--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "pknsl",
-	"version": "0.5.0",
+	"version": "0.7.0",
 	"private": true,
-	"homepage": "./",
+	"homepage": "https://www.pknsl.com",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
