--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"anix": "^1.3.6",
+		"cors": "^2.8.5",
+		"express": "^4.17.3",
 		"firebase": "^9.6.10",
 		"jquery": "^3.6.0",
+		"nodemailer": "^6.7.3",
 		"particles-bg": "^2.5.5",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
