Updated all outbound links to open in a new tab

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "pknsl",
-	"version": "0.7.0",
+	"name": "pknsldotcom",
+	"version": "1.0.0",
 	"private": true,
 	"homepage": "https://www.pknsl.com",
 	"dependencies": {
