Added trigger email

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"version": "2.0.0",
 	"homepage": "https://www.pknsl.com",
 	"dependencies": {
-		"@emailjs/browser": "^3.5.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"anix": "^1.3.6",
 		"firebase": "^9.6.10",
+		"firebase-admin": "^11.0.0",
 		"jquery": "^3.6.0",
 		"particles-bg": "^2.5.5",
 		"react": "^17.0.1",
