--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pknsldotcom",
 	"version": "2.0.0",
-	"homepage": "https://www.pknsl.com",
+	"homepage": "https://pknsl.com",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
