--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pknsldotcom",
-	"version": "2.1.1",
+	"version": "3.1.2",
 	"homepage": "https://pknsl.com",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
@@ -8,8 +8,9 @@
 		"@testing-library/user-event": "^12.1.10",
 		"anix": "^1.3.6",
 		"firebase": "^9.8.3",
-		"firebase-admin": "^11.0.0",
+		"firebase-admin": "^11.10.1",
 		"jquery": "^3.6.0",
+		"nodemailer": "^6.9.4",
 		"particles-bg": "^2.5.5",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
