--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
 	"name": "pknsldotcom",
-	"version": "2024.2.15",
+	"version": "2024.3.21",
 	"homepage": "https://pknsl.com",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"anix": "^1.3.6",
+		"caniuse-lite": "^1.0.30001599",
 		"firebase": "^9.8.3",
 		"firebase-admin": "^11.10.1",
 		"jquery": "^3.6.0",
 		"particles-bg": "^2.5.5",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
+		"react": "^16.0.0",
+		"react-dom": "^16.0.0",
 		"react-ga": "^3.3.0",
 		"react-reveal": "^1.2.2",
 		"react-scripts": "^5.0.1",
