--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "resend": "^4.1.2",
     "three": "^0.174.0"
   },
   "devDependencies": {
